Se acaba lo básico

--- a/js-practico/index.html
+++ b/js-practico/index.html
@@ -7,14 +7,16 @@
     <title>Manipulación del DOM básica</title>
 </head>
 <body>
-    <h1>Manipulación del DOM básica</h1>
+    <h1 class="verde">Manipulación del DOM básica</h1>
+    <form id="form">
+        <input id="calculo1" placeholder="Escribe algo aquí">
+        <input id="calculo2" placeholder="Escribe algo aquí">
+        <!-- <button id="btnCalculate">Calcular</button> -->
+        <button type="button" id="btnCalculate">Calcular</button>
+        <!-- Los formularios por defecto agarran el [ultimo botón y lo interretan como tipo SUBMIT] -->
 
-    <p>Esto es un párrafo</p>
-    <p class="parrafito"> Esto es un párrafo con clase</p>
-    <p id="pid">Esto es un párrafo con ID</p>
-
-    <input placeholder="Escribe algo aquí" value="123">
-
+        <p id="result"></p>   
+    </form>
     <script src="/script.js"></script>
 </body>
 </html>
